--- a/problem/templates/problem/editTab/testcase.html
+++ b/problem/templates/problem/editTab/testcase.html
@@ -1,65 +1,49 @@
-<table>
-  <tr>
-    <th colspan="3">Testcase Number</th>
-    <th>Time Limit</th>
-    <th>Memory Limit</th>
-    <th></th>
-  </tr>
-  <tr>
-    <td>
-      <span id='inFileTooltip' data-toggle="tooltip" data-placement="top" title="Edit">
-        <a>1.in</a>
-      </span>
-    </td>
-    <td>
-      <span id='outFileTooltip' data-toggle="tooltip" data-placement="top" title="Edit">
-        <a>1.out</a>
-      </span>
-    </td>
-    <script>
-    $("#inFileTooltip").tooltip('hide');
-    $("#outFileTooltip").tooltip('hide');
-    </script>
-    <td>
-      <input type="number" value="1">
-    </td>
-    <td>
-      <input type="number" value="32">
-    </td>
-    <td>
-      <button class="btn btn-primary" onclick="return false" 
-      data-toggle='modal' data-target='#edit_testcase'>Edit</button>
-      <button class="btn btn-primary" onclick="return false">Update</button>
-      <button class="btn btn-primary" onclick="return false">Delete</button>
-    </td>
-  </tr>
-</table>
-
-<table>
+<br>
+{% if not is_new %}
+<table id="testcase_table">
+  <style>
+    td {
+      padding: 5px;
+    }
+    input {
+      width: 150px;
+    }
+  </style>
   <tr>
     <th>Input</th>
-    <th>Output</th>
+    <th>Input</th>
     <th>Time Limit</th>
     <th>Memory Limit</th>
     <th></th>
   </tr>
-  <tr>
+  {% for t in testcase %}
+  <tr data-target="{{t.pk}}">
     <td>
-      <input type="file">
+      <a href="/media/testcase/{{t.pk}}.in">{{t.pk}}.in</a>
     </td>
     <td>
-      <input type="file">
+      <a href="/media/testcase/{{t.pk}}.out">{{t.pk}}.out</a>
     </td>
-    <td>
-      <input type="number" value="1">
-    </td>
-    <td>
-      <input type="number" value="32">
-    </td>
-    <td>
-      <button class="btn btn-primary" onclick="return false">Add</button>
-    </td>
+    <td><input type="number" id="{{t.pk}}_time" name="time_limit" value="{{t.time_limit}}"></td>
+    <td><input type="number" id="{{t.pk}}_memory" name="memory_limit" value="{{t.memory_limit}}"></td>
+    <td><button class="btn btn-primary reupload_btn" onclick="return false"
+        data-toggle="modal" data-target="#edit_testcase">ReUpload</button></td>
+    <td><button class="btn btn-primary update_btn">Update</button></td>
+    <td><button class="btn btn-danger delete_btn">Delete</button></td>
   </tr>
+  {% endfor %}
+  <tr>
+    <form id="add_testcase" method="POST" 
+      enctype="multipart/form-data" action="{% url 'problem:problem.views.testcase' pid %}">
+      {% csrf_token %}
+      <td><input type="file" name="t_in" required></td>
+      <td><input type="file" name="t_out" required></td>
+      <td><input type="number" id="new_time_limit" name="time_limit" required></td>
+      <td><input type="number" id="new_memory_limit" name="memory_limit" required></td>
+      <td><button class="btn btn-primary" id="add_testcase_btn">Add</button></td>
+    </form>
+  </tr>
+
 </table>
 
 <div class='modal fade' id='edit_testcase'>
@@ -72,15 +56,75 @@
         </button>
         <h4 class='modal-title'>Edit Testcase</h4>
       </div>
-      <div class='modal-body'>
-        <p>Input</p>
-        <input type='file'><br>
-        <p>Output</p>
-        <input type='file'>
-      </div>
-      <div class='modal-footer'>
-        <button class='btn btn-info' data-dismiss='modal'>Save changes</button>
-      </div>
+      <form id="update_testcase" method="POST" 
+        enctype="multipart/form-data" action="{% url 'problem:problem.views.testcase' pid %}">
+        {% csrf_token %}
+        <div class='modal-body'>
+          <p>Input</p>
+          <input type='file' name='t_in' required><br>
+          <p>Output</p>
+          <input type='file' name='t_out' required>
+        </div>
+        <div class='modal-footer'>
+          <button class='btn btn-info'>Save changes</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
+
+<script>
+var update_tid = 0;
+$(document).ready(function() {
+    $("#add_testcase").submit(function (e) {
+        e.preventDefault();
+        add_new_testcase({{pid}}, new FormData(this));
+    });
+    $("#update_testcase").submit(function (e) {
+        e.preventDefault();
+        $.ajax({
+          type: "POST",
+          url: "/problem/{{pid}}/testcase/"+update_tid+"/",
+          data: new FormData(this),  
+          processData: false,
+          contentType: false,
+          success: function(data) {
+            alert("update success");
+          }
+        });
+    });
+    $(".reupload_btn").click(function (e) {
+        update_tid = $(this).parents("tr").attr('data-target');
+    });
+    $(".update_btn").click(function (e) {
+        var tid = $(this).parents("tr").attr('data-target');
+        var time = $("#"+tid+"_time").serialize();
+        var memory = $("#"+tid+"_memory").serialize();
+        var csrf = $("{% csrf_token %}").serialize();
+        $.ajax({
+            type: 'POST',
+            url: '/problem/'+{{pid}}+'/testcase/'+tid+'/',
+            data: time+"&"+memory+"&"+csrf,
+            success: function(data) {
+              alert('testcase updated')
+            }
+        });
+        return false;
+    });
+    $(".delete_btn").click(function (e) {
+        var row = $(this).parents("tr");
+        var tid = $(this).parents("tr").attr('data-target');
+        $.ajax({
+            type: 'GET',
+            url: '/problem/'+{{pid}}+'/testcase/'+tid+'/delete/',
+            success: function(data) {
+              row.hide();
+            }
+        });
+        return false;
+    });
+});
+</script>
+{% else %}
+<strong>Save your problem before uploading testcases</strong>
+{% endif %}
