add render helper function

--- a/index/templates/index/404.html
+++ b/index/templates/index/404.html
@@ -48,6 +48,7 @@ SOFTWARE.
     <p style="text-align:center" class="err1" >4&nbsp0&nbsp4</p>
   </div>
   <p style="text-align:center" class="err2">Page Not Found</p>
+  <p style="text-align:center" class="err2">{{ error_message }}</p>
   <p style="text-align:center" class="err3">
     Sorry , the page you are looking for seems to be missing.
   </p>
