--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -29,33 +29,6 @@ SOFTWARE.
 <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.min.js"></script>
 <script language="javascript" type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.2/jquery.flot.pie.min.js"></script>
 
-<!-- conform password modal -->
-<div class="modal fade" id="passwd-modal" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">
-          <span aria-hidden="true">&times;</span>
-          <span class="sr-only">Close</span>
-        </button>
-        <h4 class="modal-title">Please Enter Your Current Password</h4>
-      </div>
-      <div class="modal-body">
-        <form class="form-horizontal">
-          <div class="form-group">
-            <label class="control-label">Current Password</label>
-            <input class="form-control input-sm" type="password">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-default" data-dismiss="modal">Close</button>
-        <button class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
 <script src={% static "js/piechartsettings.js"%}></script>
 <script type="text/javascript">
 $(function() {
@@ -63,16 +36,16 @@ $(function() {
 });
 </script>
 
-<div class="bs-docs-section">
+<div class="bs-docs-section container">
   <div class="row">
-    <div class="col-lg-6" style="width:49%;height:70%;float:left;">
+    <div class="col-lg-6">
       <div class="panel panel-default">
         <div class="panel-heading">Statistics</div>
         <div class="panel-body">
           <div class="form-group">
             <label class="col-lg-2 control-label">Piechart</label>
             <div class="col-lg-10">
-              <div id="piechart" style="width:500px;height:400px;"></div>
+              <div id="piechart" style="width:320px;height:250px;"></div>
             </div>
           </div>
           {% block statistic_block %}
@@ -81,12 +54,12 @@ $(function() {
         </div>
       </div>
     </div>
-    <div class="col-lg-6" style="width:49%;height:70%;float:right;">
+    <div class="col-lg-6">
       {% block profile_field_block %}
       <div class="panel panel-default">
         <div class="panel-heading">Profile</div>
         <div class="panel-body">
-          <form class="form-horizontal" style="width:60%; padding: 5px;">
+          <!--form class="form-horizontal" style="width:60%; padding: 5px;">
             <fieldset>
               <div class="form-group">
                 <label class="col-lg-4 control-label">User ID</label>
@@ -172,7 +145,48 @@ $(function() {
                 </div>
               </div>
             </fieldset>
-          </form>
+          </form-->
+
+  <form class="form-horizontal" action="" method="post" style="margin:10px;">
+    {% csrf_token %}
+    {% for field in profile_form %}
+    <div class="form-group">
+      <div class='row'>
+        <div class='col-lg-2 col-lg-offset-1'>
+          <label class="control-label">{{ field.label }}</label>
+        </div>
+        <div class='col-lg-5'>
+          {{ field }}
+        </div>
+      </div>
+      {% if form.non_field_errors %}
+      <ul>
+        {% for error in form.non_field_errors %}
+          <li class='col-lg-offset-2'><strong style="color:red">{{ error|escape }}</strong></li>
+        {% endfor %}
+      </ul>
+      {% endif %} 
+      {% if field.errors %}
+      <ul>
+        {% for error in field.errors %}
+          <li class='col-lg-offset-2'><strong style="color:red">{{ error|escape }}</strong></li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+    </div>
+    {% endfor %}
+    <div class="modal-footer">
+      <div id='msg' class='col-lg-4'>{{ message }}</div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+    <hr>
+    <div class="poptxt_login">
+      Don't have an account? You can 
+      <a href={% url "users:create" %}>
+        <p class="p6">register here</p>
+      </a>
+    </div>
+  </form>
         </div>
       </div>
       {% endblock profile_field_block %}
