--- a/contest/templates/contest/editContest.html
+++ b/contest/templates/contest/editContest.html
@@ -24,6 +24,13 @@ SOFTWARE.
 {% endblock title_name %}
 
  {% block body_block %}
+ {% for fields in form%}
+<div>
+    {{ fields.errors }}
+    {{ fields.label_tag }}
+    {{ fields }}
+</div>
+{% endfor %}
 <div class="container">
   <form action="." method="POST">
     {% csrf_token %} 
