--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -158,7 +158,7 @@ SOFTWARE.
           </li>
           <li><a href={% url "users:submit" %}><p class="p2">Submit</p></a></li>
           <li><a href={% url "status:status" %}><p class="p2">Status</p></a></li>
-          <li><a href="/index/group_list"><p class="p2">Group</p></a></li>
+          <li><a href={% url "group:list" %}><p class="p2">Group</p></a></li>
           <li><a href={% url "team:list" %}><p class="p2">Team</p></a></li>
           <li><a href={% url "users:profile" %}><p class="p2">Personal</p></a></li>
           <li><a href="#"><p class="p2">User Rank</p></a></li>
